--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
 
 <div class="'card">
-
+    <div class="search"></div>
+        <input type="text" placeholder="Enter the city name my g"
+        spellcheck="false">
+        <button><img src="images/search.png" alt=""></button>
 </div>
     
 </body>
