--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 <body>
 
 <div class="'card">
-    <div class="search"></div>
+    <div class="search">
         <input type="text" placeholder="Enter the city name my g"
         spellcheck="false">
         <button><img src="images/search.png" alt=""></button>
+    </div>
 </div>
     
 </body>
