--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<div class="'card">
+<div class="card">
     
     <div class="search">
         <input type="text" placeholder="Enter the city name my g"
