--- a/index.html
+++ b/index.html
@@ -46,14 +46,26 @@
 <script>
 
 const apiKey = "a095d133a7d8b501cd77504c5f5c817c";
-const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=brampton";
+const apiUrl = "https://api.openweathermap.org/data/2.5/weather?&units=metric&q=";
 
-async function checkWeather(){
-    const response = await fetch(apiUrl + `&appid=${apiKey}`);
+const searchBox = document.querySelector('.search input');
+const searchBtn = document.querySelector('.search button');
+
+async function checkWeather(city){
+    const response = await fetch(apiUrl + city + `&appid=${apiKey}`);
     var data = await response.json();
 
     console.log(data);
+    document.querySelector('.city').innerHTML = data.name;
+    document.querySelector('.temp').innerHTML = Math.round(data.main.temp) + "°C";
+    document.querySelector('.humidity').innerHTML = data.main.humidity + "%";
+    document.querySelector('.wind').innerHTML = data.wind.speed + " km/h";
+
+    
 }
+searchBtn.addEventListener('click', () => {
+    checkWeather(searchBox.value);
+})
 
 </script>
     
